@@ -1,5 +1,15 @@
 2002-05-28  Richard Williamson  <rjw@apple.com>
 
+    Fixed edge case cancellation problem (actually happens a lot).
+    No new loads are allowed after a data source has been
+    set as "stopping".
+    
+	* kwq/KWQKloader.mm:
+	(Loader::servePendingRequests):
+	* kwq/external.h:
+
+2002-05-28  Richard Williamson  <rjw@apple.com>
+
     Fixed reporting of malformed resources URLs.  This fixed
     exceptions that were being thrown because nil handles were
     being added to datasource handle array.
